# cris-e2e-test-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
config/: model_config.yaml  pipeline_config.yaml
notebooks/: 01_data_exploration.py
pipelines/: inference_pipeline.py  training_pipeline.py
src/cris_e2e_ml_pipeline/: __init__.py
src/data_ingestion/: data_loader.py
src/data_preprocessing/: data_cleaner.py  feature_engineer.py
src/feature_store/: feature_manager.py
src/model/: evaluater.py  predictor.py  trainer.py
workflows/: mlops_workflow.py
